# workfloworchestrator.github.io

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  CNAME  Gemfile  Justfile  README.md  _config.yml  about.md  board-elections.md  contact.md  index.html  mkdocs.yml  objects.inv  project.md  pyproject.toml  setup_subprojects.sh  sitemap.xml
.github/workflows/: gh-pages.yml  pre-commit.yml  run-mkdocs-build.yml
_data/: projects.yml
_includes/: about.html  navbar.html  showcase.html
_layouts/: about.html  board-elections.html  contact.html  default.html  project.html
about/: index.html
architecture/framework/: index.html
architecture/input-forms/: index.html
architecture/orchestrator-ui/: index.html
assets/javascripts/: bundle.081f42fc.min.js  bundle.79ae519e.min.js  bundle.bd41221c.min.js  bundle.c8d2eff1.min.js
board-elections/: index.html
contact/: index.html
docs/: CNAME  about.md  board-elections.md  contact.md  index.md  leadership.md  media.md  meetings.md  members.md
docs/architecture/: framework.md  input-forms.md  orchestrator-ui.md
docs/css/: style.css
docs/workshops/example-orchestrator/: bootstrap.md  create-your-own.md  domain-models.md  execute-workflows.md  generator.md  node-create.md  node-modify.md  node-terminate.md  node-validate.md  overview.md  scenario.md  workflow-basics.md  workflow-introduction.md
hooks/: merge_subproject_configs.py
leadership/: index.html
lightweight-service-orchestrator/: index.html
lightweight-service-orchestrator/contributing/: index.html
lightweight-service-orchestrator/docker/: index.html
lightweight-service-orchestrator/executables/: index.html
lightweight-service-orchestrator/executables/callback/: index.html
lightweight-service-orchestrator/executables/parameters/: index.html
lightweight-service-orchestrator/executors/: index.html
lightweight-service-orchestrator/installation/: index.html
lightweight-service-orchestrator/playbooks/: index.html
media/: index.html
meetings/: index.html
members/: index.html
orchestrator-core/: index.html
orchestrator-ui-library/: index.html
orchestrator-ui-library/forms/: index.html
search/: search_index.json
(+145 files in other folders)
