[project]
name = "workfloworchestrator-org"
version = "0.1"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-drawio>=1.12.0",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-monorepo-plugin",
    # orchestrator-core docs plugins
    "orchestrator-core>=5.0",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-open-in-new-tab>=1.0.8",
    # Pinned to 1.2.2: 1.2.3 adds a dependency on "properdocs", a MkDocs fork that injects a
    # "switch away from mkdocs" banner into the build. 1.2.2 depends only on mkdocs.
    "mkdocs-redirects==1.2.2",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mkdocstrings[python]>=0.29.1",
    # orchestrator-ui-library docs plugins
    "termynal",
    "mkdocs-awesome-pages-plugin",
    # lso itself for python docstrings
    "orchestrator-lso>=3.0",
    # linting
    "pre-commit",
    "yamllint",
]

[tool.uv]
# orchestrator-lso 3.0.0 pins pydantic-settings==2.13.1 and uvicorn[standard]==0.44.0, which
# conflict with orchestrator-core 5.0's pydantic-settings>=2.14.0 and uvicorn[standard]>=0.46.0.
# These packages are only imported by mkdocstrings to render API docs, so override the pins to the
# versions orchestrator-core 5.0 requires.
override-dependencies = [
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0,<0.47",
    "fastapi>=0.136.0,<0.137",
]
